// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourView Component should handle an error http status: error http status 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <EmptyState
      className="fadein"
      variant="full"
    >
      <img
        alt="t(curiosity-tour.emptyStateIconAlt, [object Object])"
        aria-hidden={true}
        className="curiosity-emptystate-img-icon"
        src="subscriptions.svg"
      />
      <Title
        headingLevel="h5"
        size="lg"
      >
        t(curiosity-tour.emptyStateTitle, [object Object])
      </Title>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescription, [object Object])
      </EmptyStateBody>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescriptionExtended, [object Object])
      </EmptyStateBody>
      <Component
        className="uxui-curiosity__button-learn"
        component="a"
        href="https://access.redhat.com/products/subscription-central"
        target="_blank"
        variant="primary"
      >
        t(curiosity-tour.emptyStateLinkLearnMore)
      </Component>
      <EmptyStateSecondaryActions>
        <Component
          component="a"
          href="https://access.redhat.com/account-team"
          target="_blank"
          variant="link"
        >
          t(curiosity-tour.emptyStateLinkContactUs)
        </Component>
      </EmptyStateSecondaryActions>
    </EmptyState>
  </PageSection>
</PageLayout>
`;

exports[`TourView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <EmptyState
      className="fadein"
      variant="full"
    >
      <img
        alt="t(curiosity-tour.emptyStateIconAlt, [object Object])"
        aria-hidden={true}
        className="curiosity-emptystate-img-icon"
        src="subscriptions.svg"
      />
      <Title
        headingLevel="h5"
        size="lg"
      >
        t(curiosity-tour.emptyStateTitle, [object Object])
      </Title>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescription, [object Object])
         t(curiosity-tour.emptyStateDescriptionTour, [object Object])
      </EmptyStateBody>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescriptionExtended, [object Object])
      </EmptyStateBody>
      <Component
        className="uxui-curiosity__button-tour"
        variant="primary"
      >
        t(curiosity-tour.emptyStateButton)
      </Component>
      <EmptyStateSecondaryActions>
        <Component
          component="a"
          href="https://access.redhat.com/products/subscription-central"
          target="_blank"
          variant="link"
        >
          t(curiosity-tour.emptyStateLinkLearnMore)
        </Component>
        <Component
          component="a"
          href="https://access.redhat.com/account-team"
          target="_blank"
          variant="link"
        >
          t(curiosity-tour.emptyStateLinkContactUs)
        </Component>
      </EmptyStateSecondaryActions>
    </EmptyState>
  </PageSection>
</PageLayout>
`;

exports[`TourView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader>
    Subscription Watch
  </PageHeader>
  <PageSection>
    <EmptyState
      className="fadein"
      variant="full"
    >
      <img
        alt="t(curiosity-tour.emptyStateIconAlt, [object Object])"
        aria-hidden={true}
        className="curiosity-emptystate-img-icon"
        src="subscriptions.svg"
      />
      <Title
        headingLevel="h5"
        size="lg"
      >
        t(curiosity-tour.emptyStateTitle, [object Object])
      </Title>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescription, [object Object])
         t(curiosity-tour.emptyStateDescriptionTour, [object Object])
      </EmptyStateBody>
      <EmptyStateBody>
        t(curiosity-tour.emptyStateDescriptionExtended, [object Object])
      </EmptyStateBody>
      <Component
        className="uxui-curiosity__button-tour"
        variant="primary"
      >
        t(curiosity-tour.emptyStateButton)
      </Component>
      <EmptyStateSecondaryActions>
        <Component
          component="a"
          href="https://access.redhat.com/products/subscription-central"
          target="_blank"
          variant="link"
        >
          t(curiosity-tour.emptyStateLinkLearnMore)
        </Component>
        <Component
          component="a"
          href="https://access.redhat.com/account-team"
          target="_blank"
          variant="link"
        >
          t(curiosity-tour.emptyStateLinkContactUs)
        </Component>
      </EmptyStateSecondaryActions>
    </EmptyState>
  </PageSection>
</PageLayout>
`;
